--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,15 @@
 /* CSS HERE */
+.footer1{
+  background-color: #444444;
+}
 
+
+/* code taken from IGOR PUPPIM from codepen.io: https://codepen.io/igorpuppim/pen/JvywNx; */
 .noise{
 	content: "";
 	background-image: 
 	url(https://media.giphy.com/media/3o7qDTjU5TVYQc6Z20/giphy.gif);
-	opacity: 0.5;
+	opacity: 0.7;
 	background-size: 100%;
 	top: 0;
 	left: 0;
@@ -14,6 +19,8 @@
 	z-index: 99;
 }
 
+
+/* code taken from: https://codemyui.com/pure-css-text-shake-animation/; */
 .shakytext{
 	position: relative;
   text-transform: uppercase;
@@ -33,12 +40,16 @@
   background-clip: text;
   text-fill-color: transparent;
   background-image: linear-gradient(
-                    #FFFFFF, 
-                    #191919);
+                    #11d9a8,
+                    #d933e9,
+                    #180b6c,
+                    #689e93,
+                    #9abdc6,
+                    #5b415a);
   animation: .8s shake infinite alternate;
 }
 
-.buttonshake{
+.Headershake{
 	position: relative;
   text-transform: uppercase;
   letter-spacing: 6px;
